--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.17.0",
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "^12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
