--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.10.2",
     "babel-plugin-styled-components": "^2.0.2",
     "next": "^12.0.8",
     "react": "17.0.2",
