--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "dependencies": {
     "@babel/core": "^7.17.0",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.2",
+    "@mui/material": "^5.11.1",
     "babel-plugin-styled-components": "^2.0.2",
     "next": "^12.0.8",
     "react": "17.0.2",
